fix : description overflow bug fix.

--- a/src/Components/Datasets_New/DataSetsView.css
+++ b/src/Components/Datasets_New/DataSetsView.css
@@ -22,6 +22,10 @@
     color: #000000 !important;
 }
 
+.wordWrap {
+    word-wrap: break-word;
+}
+
 .view_datasets_bold_text_sm {
     font-family: 'Montserrat' !important;
     font-weight: 600 !important;
